-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
When routers time out a client connection during a catastrophic
network disturbance like a cabinet EPO, there still may be
traffic from the file system that is using the router for the
return path to the client. This will cause a new connection to try
to be formed before the network has quiesced causing multiple failed
connection attempts which need to be put in purgatory since they could
possibly connect in the future. This can cause the gart space to be
consumed with registrations.
So we'll add an option to not reconnect after connection timeout